<?xml version="1.0" encoding="utf-8"?>
<merge android:id="@+id/content_my"
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       android:focusable="true"
       android:focusableInTouchMode="true"
       tools:context="aicare.net.cn.iweightdemo.MyActivity"
       tools:showIn="@layout/activity_my">

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:checked="true"
            android:text="@string/male"/>

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@id/rg_sex"/>

    <SeekBar
        android:id="@+id/seek_bar_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/height"
        app:layout_constraintTop_toBottomOf="@id/seek_bar_age"/>

    <SeekBar
        android:id="@+id/seek_bar_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_height"
        />

    <TextView
        android:id="@+id/text_view_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/weight"
        app:layout_constraintTop_toBottomOf="@id/seek_bar_height"/>

    <SeekBar
        android:id="@+id/seek_bar_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_weight"/>

    <TextView
        android:id="@+id/tv_adc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/adc"
        app:layout_constraintTop_toBottomOf="@id/seek_bar_weight"/>

    <SeekBar
        android:id="@+id/seek_bar_adc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_adc"/>


    <Button
        android:id="@+id/btn_sync_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_list"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar_adc"/>

    <Button
        android:id="@+id/btn_sync_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_history"
        app:layout_constraintRight_toLeftOf="@id/btn_sync_list"
        app:layout_constraintTop_toTopOf="@id/btn_sync_list"/>

    <Button
        android:id="@+id/btn_sync_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_user"
        app:layout_constraintLeft_toRightOf="@id/btn_sync_list"
        app:layout_constraintTop_toTopOf="@id/btn_sync_list"/>

    <Button
        android:id="@+id/btn_sync_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sync_history"

        />




    <Button
        android:id="@+id/btn_query_did"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_did"
        app:layout_constraintEnd_toStartOf="@id/btn_sync_time"
        app:layout_constraintTop_toTopOf="@id/btn_sync_time"/>


    <Button
        android:id="@+id/btn_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_version"
        app:layout_constraintLeft_toRightOf="@id/btn_sync_time"
        app:layout_constraintTop_toTopOf="@id/btn_sync_time"/>


    <RadioGroup
        android:id="@+id/rg_change_unit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_sync_time">

        <RadioButton
            android:id="@+id/rb_kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_kg"/>

        <RadioButton
            android:id="@+id/rb_lb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_lb"/>

        <RadioButton
            android:id="@+id/rb_st"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_st"/>

        <RadioButton
            android:id="@+id/rb_jin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_jin"/>
    </RadioGroup>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/default_weight"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/rg_change_unit"/>

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/default_temp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_weight"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_weight"/>

    <TextView
        android:id="@+id/tv_did"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/default_DID"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_weight"/>

</merge>
